2002-02-22  Maciej Stachowiak  <mjs@apple.com>

	Fix prebinding:

	* src/Makefile.am: Enable prebinding, set first segment address to
	0x2200000 to avoid colliding with apps or our other
	frameworks. Change other link flags to support prebinding.

	Set up some hacks to avoid link-time dependency on
	WebKit. Prebinding is incompatible with - undefined suppress, so
	we can't have WebCore depend on symbols provided by WebKit any
	more:
	
	* src/kwq/KWQKHTMLPart.h:
	* src/kwq/KWQKloader.mm: (WCSetIFLoadProgressMakeFunc), (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:data:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDataDidBecomeAvailable:userData:]):
	* src/kwq/WCPluginWidget.h:
	* src/kwq/WCPluginWidget.mm: (WCSetIFPluginMakeFunc),
	(WCPluginWidget::WCPluginWidget):

2002-02-22  Richard Williamson  <rjw@apple.com>

        Added data: to IFURLHandleResourceDidFinishLoading:
        
	* include/WCURLHandle.h:
	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient
	WCURLHandleResourceDidFinishLoading:data:userData:]):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:data:userData:]):

2002-02-22  Kenneth Kocienda  <kocienda@apple.com>

	Sent handle an autorelease message.

	* src/kwq/KWQKHTMLPart.mm: (-[KHTMLPartLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[KHTMLPartLoadClient
	WCURLHandle:resourceDidFailLoadingWithResult:userData:]):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient
	WCURLHandleResourceDidCancelLoading:userData:]), (-[URLLoadClient
	WCURLHandleResourceDidFinishLoading:userData:]), (-[URLLoadClient
	WCURLHandle:resourceDidFailLoadingWithResult:userData:]):

2002-02-21  Maciej Stachowiak  <mjs@apple.com>

	* src/kwq/KWQString.mm: (QString::fill): Fix a bug that was
	triggering assertion failures in CF.
	
	* src/kdelibs/kjs/kjs-test: Turn off some environment variables to
	make the tests pass.
