@@ -1,3 +1,7 @@
+2002-02-23  Maciej Stachowiak  <mjs@apple.com>
+
+	* src/kwq/WCLoadProgress.h: Add the forgotten WCLoadProgress.h.
+
 2002-02-22  Maciej Stachowiak  <mjs@apple.com>
 
 	Fix prebinding:
